@@ -1,3 +1,7 @@
+2002-01-07  Per Bothner  <per@bothner.com>
+
+	* OutPort.java (beginDocument, endDocument):  New methods.
+
 2001-12-24  Per Bothner  <per@bothner.com>
 
 	* Values.java (make):  Fix call to getNext.
